# vps-modern

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/grid/: CMakeLists.txt
src/grid/benchmark/: CMakeLists.txt
src/grid/include/vps/grid/: grid.h
src/grid/src/: grid.cpp
src/grid/test/: CMakeLists.txt  test_grid.cpp
src/particles/: CMakeLists.txt
src/particles/benchmark/: CMakeLists.txt
src/particles/include/vps/particles/: particles.h
src/particles/src/: particles.cpp
src/particles/test/: CMakeLists.txt  test_particles.cpp
