# ==============================================================================
# Source Directory CMakeLists.txt
# ==============================================================================
# This file adds all the library modules and the main application

# Core modules
add_subdirectory(particles)
add_subdirectory(grid)

# Main application
add_subdirectory(app)
