# ==============================================================================
# Particles Module Benchmarks
# ==============================================================================
# TODO: Add Google Benchmark integration

message(STATUS "Benchmarks for particles module not yet implemented")

# When ready:
# find_package(benchmark REQUIRED)
# add_executable(bench_particles bench_particles.cpp)
# target_link_libraries(bench_particles PRIVATE vps::particles benchmark::benchmark)
